	PR c++/70353

gcc/
	* tree-inline.c (remap_decls): Don't add_local_decl if
	cfun is null.
gcc/cp/
	* decl.c (make_rtl_for_nonlocal_decl): Don't defer local statics
	in constexpr functions.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@234530 138bc75d-0d04-0410-961f-82ee72b054a4